<resources>
    <string name="app_name">NUMAD22Sp_YueSun</string>
    <string name="about_me_string">About Me</string>
    <string name="name">Yue Sun</string>
    <string name="email">sun.yue1@northeastern.edu</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="link_collector">Link Collector</string>
    <string name="link_name">link_name</string>
    <string name="link_url">link_url</string>
    <string name="add_link">Add Link</string>
    <string name="dialog_title">Add Link</string>
    <string name="bottom_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="snackbar_msg_missing_input">Failed to save a link. Missing input - name and URL are required.</string>
    <string name="snackbar_action">Action</string>
    <string name="snackbar_msg_invalid_url">Failed to save the link: Invalid URL.</string>
    <string name="snackbar_msg_success">"Link added. "</string>
    <string name="snackbar_action_undo">Undo</string>
    <string name="snackbar_msg_deleted">Deleted Link.</string>
    <string name="https">https</string>
    <string name="http">http</string>
    <string name="http_start_of_url">http://</string>
    <string name="Latitude">Latitude: </string>
    <string name="Longitude">Longitude: </string>
    <string name="locator_button">Locator</string>
    <string name="location_image_description">location_image_description</string>
    <string name="longitude_permission_denied">Permission Denied</string>
    <string name="latitude_permission_denied">Location Unavailable</string>
    <string name="longitude_provider_disabled">Location provider disabled</string>
    <string name="latitude_provider_disabled">Location Unavailable</string>
    <string name="at_your_service">At Your Service</string>
    <string name="get_holidays">Get Holidays</string>
    <string name="holiday_date">Holiday Date</string>
    <string name="country_code">Country Code</string>
    <string name="holiday_name">holiday_name</string>
    <string name="is_fix">Is Fix</string>
    <string name="country_code_input_title">Country Code:</string>
    <string name="hint_country_code_cn">e.g., CN, JP, FR</string>
    <string name="year">Select the target year</string>
    <string name="year_2022">2022</string>
    <string name="default_country_china">China</string>
    <string name="hint_country">Country</string>
</resources>