<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/helloWorld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="Hello World!"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/dark_purple"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloWorld">

        <Button
            android:id="@+id/clickyButton"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:layout_marginVertical="5dp"
            android:width="160dp"
            android:backgroundTint="@color/dark_orange"
            android:onClick="onClick"
            android:text="@string/clicky_clicky"
            android:textSize="16sp" />

        <Button
            android:id="@+id/linkCollectorButton"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:layout_marginVertical="5dp"
            android:width="160dp"
            android:backgroundTint="@color/dark_orange"
            android:onClick="onClick"
            android:text="@string/link_collector"
            android:textSize="16sp" />

        <Button
            android:id="@+id/locatorButton"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/dark_orange"
            android:onClick="onClick"
            android:text="@string/locator_button"
            android:textSize="16sp" />

        <Button
            android:id="@+id/aboutMeButton"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/dark_orange"
            android:onClick="onClick"
            android:text="@string/about_me_string"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>